Fix random ID problem and put JS inside iffy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
 <header>
-    <img src="http://static.red-lang.org/red-logo.png" alt="Red Logo" id="logo">
+    <a href="http://localhost/try-red/">
+        <img src="http://static.red-lang.org/red-logo.png" alt="Red Logo" id="logo">
+    </a>
     <h1>Red Playground</h1>
 
     <div id="controlsWrapper">
